<resources>
    <string name="app_name">MyUIDesign2</string>
    <string name="profileimage">Profile Pic</string>
    <string name="username">Ola Machiavelli</string>
    <string name="products">Products</string>
    <string name="payment">Payments</string>
    <string name="history">History</string>
    <string name="support">Support</string>
    <string name="more">More</string>
    <string name="partners">Partners</string>
    <string name="special_offers">Special Offers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thank_you">Thank You</string>
</resources>